argocd/apps/homebox/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homebox-vs
spec:
  hosts:
  - homebox.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: homebox
        port:
          number: 7745
